src/mobile.less
@darkGray: #111;

@media (max-width: 800px) and (orientation: portrait) {
    body {
        #logo {
            width: 85%;
            #title {
                font-size: 11.5vw;
            }
        }

        #gradient-bg {
            height: auto;
            aspect-ratio: 4 / 3;
            top: 50%;
            transform: translateY(-50%);
        }

        #scroll-indicator {
            transform: translateY(13%) translateX(-50%);
            width: 17vw;
            animation-name: mobile-bounce;
        }
        @keyframes mobile-bounce {
            from {
                bottom: 2em;
            }
            to {
                bottom: 3.5em;
            }
        }

        main {
            max-width: 100%;
            padding: 1em 1.5em;
            font-size: 1.25em;

            #team-wrapper {
                display: block;
            }
        }

        #navbar {
            #nav-logo {
                // display: none;
                width: 5em;
            }
        }

        #social-links {
            top: auto;
            left: 0;
            right: 0;
            bottom: 0;
            line-height: 2.5em;
            display: block;
            text-align: center;
            background-color: fade(@darkGray, 90%);
            font-size: .75em;
        }

        footer {
            font-size: .75em;
        }

        #mailing-list-modal {
            width: calc(100% - 2em);

            #mc_embed_signup {
                width: 100%;
                box-sizing: border-box;

                h2 {
                    font-size: 1.5em;
                    line-height: 1em;
                    padding: 0 0 .3em 0;
                    margin-bottom: .5em;
                }

                .response {
                    width: 100%;
                }
            }
        }
    }
}

@media (max-height: 800px) and (orientation: landscape) {
    body {
        #logo {
            width: auto;
            height: 55%;
            #title {
                font-size: 12.5vh;
            }
        }
        #scroll-indicator {
            width: 16vh;
            transform: translateY(30%) translateX(-50%);
        }

        main {
            max-width: 100%;
            padding: 1em 3em;
            font-size: 1.3em;
        }

        #navbar {
            #nav-logo {
                width: 6em;
            }
        }

        #social-links {
            top: auto;
            bottom: .6em;
            display: inline-block;
            line-height: 1.75em;
            background-color: fade(@darkGray, 90%);
            border-radius: 2em;
            padding-left: .2em;
            padding-right: .2em;
            font-size: 1em;
        }

        footer {
            font-size: .85em;
        }
    }
}

